test/syc/good/gteq.c
/*
 * Greater than or equal
 */

int a, b;

int gteq(void)
{
	return a >= b;
}
