test/syc/bad/dupargdecl.c
/*
 * Duplicate argument identifier (function declaration)
 */

int foo(int a, int a);
